project(test)
find_package(wxWidgets 3.1.4 COMPONENTS net core base REQUIRED)
include(${wxWidgets_USE_FILE})
add_subdirectory(./lib/googletest)
set(gtest_SOURCE_DIR, ./lib/googletest/)
include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})
set(SOURCE_FILES ManagerFileTest.cpp ProgressBarTest.cpp runAllTest.cpp)
add_executable(test ${SOURCE_FILES})
target_link_libraries(test core)
target_link_libraries(test gtest gtest_main)
target_link_libraries(test ${wxWidgets_LIBRARIES})
